# recover-hackathon

./: .env.example  .gitignore  README.md  correlation_submit.py  correlation_val.py  generate_correlation_matrix.py  pyproject.toml  requirements.txt  test_xgboost.py  test_xgboost_with_context.py  train_xgboost_extra_features.py
corr_out_simple/: freq.npy
dataset/: base.py  collate.py  fucking_around.py  hackathon.py  metadata.py  work_operations.py
dataset/experiments/: build_room_datasets.py
eda/: room_distribution.py
experiments/: build_catboost_dataset.py  build_master_catboost_dataset.py  build_room_datasets.py  jobs_pos_counts.py  kjokken_inspect_data.py  romm_counts.py  train_room_model.py
metrics/: __init__.py  score.py
room_cluster_models/room_00_andre_omrader/: catboost_job_0.cbm  catboost_job_1.cbm  catboost_job_10.cbm  catboost_job_100.cbm  catboost_job_101.cbm  catboost_job_102.cbm  catboost_job_103.cbm  catboost_job_104.cbm  catboost_job_105.cbm  catboost_job_106.cbm  catboost_job_107.cbm  catboost_job_108.cbm  catboost_job_109.cbm  catboost_job_11.cbm  catboost_job_110.cbm  catboost_job_111.cbm  catboost_job_112.cbm  catboost_job_113.cbm  catboost_job_114.cbm  catboost_job_115.cbm  catboost_job_116.cbm  catboost_job_117.cbm  catboost_job_118.cbm  catboost_job_119.cbm  catboost_job_12.cbm  catboost_job_120.cbm  catboost_job_121.cbm  catboost_job_122.cbm  catboost_job_123.cbm  (+240 more)
room_clusters/: build_room_cluster_dataset.py  train_room_cluster_models.py
trygves_approach/: data_generation.py  export_test_npz.py  predict.py  save_datasets.py
(+196 files in other folders)
