[project]
name = "kai"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy>=2.1,<3",
    "pandas>=2.2.3,<3.0.0",
    "torch>=2.6.0,<3.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "seaborn>=0.13.2,<0.14.0",
    "plotly>=6.0.0,<7.0.0",
    "jupyter>=1.1.1,<2.0.0",
    "notebook>=7.3.2,<8.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "pyodbc>=5.2.0,<6.0.0",
    "polars>=1.33.0,<2.0.0",
    "torchvision<0.23",
    "scikit-learn>=1.5",
    "kaggle>=1.7.4.5",
    "pyarrow>=21.0.0",
    "lightgbm",
    "xgboost>=2.0.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.9.4,<0.10.0",
    "black>=25.1.0,<26.0.0"
]

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["F", "I", "B", "C4", "ARG", "UP", "W", "RUF"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/tests/*" = ["D", "ARG"]
"*.ipynb" = ["E402", "D103", "D101", "D102", "D107", "E501"]
